--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password:
-    url: jdbc:mysql://localhost/innovafacturas?useSSL=false
+    url: jdbc:mysql://localhost/demoinnova?useSSL=false
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
